--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,5 +8,5 @@ RUN mvn -q package -DskipTests
 
 # Runtime stage
 FROM tomcat:9-jdk11
-COPY --from=build /app/target/frontend.war /usr/local/tomcat/webapps/app.war
+COPY --from=build /app/target/frontend-1.0.0.war /usr/local/tomcat/webapps/app.war
 CMD ["catalina.sh", "run"]
