--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -17,5 +17,22 @@
             <version>8.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- JSF Implementation -->
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>2.2.20</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-impl</artifactId>
+            <version>2.2.20</version>
+        </dependency>
+        <!-- CDI Implementation -->
+        <dependency>
+            <groupId>org.jboss.weld.servlet</groupId>
+            <artifactId>weld-servlet</artifactId>
+            <version>2.4.8.Final</version>
+        </dependency>
     </dependencies>
 </project>
