--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -34,5 +34,9 @@
             <artifactId>weld-servlet</artifactId>
             <version>2.4.8.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 </project>
