Enhancements: Completed application functionality, added pgAdmin, and updated README.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 volumes:
   pgdata:
+  pgadmin_data:
 
 networks:
   app-network:
@@ -38,10 +39,25 @@ services:
 
   frontend:
     build: ./frontend
+    ports:
+      - "8081:8080"
     depends_on:
       - backend
     networks:
       - app-network
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
     ports:
-      - "8081:8080"
+      - "5050:80"
+    depends_on:
+      - db
+    networks:
+      - app-network
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
     restart: unless-stopped
