Migrate to Hibernate native with complete Swagger integration.
- Replaced generic JPA annotations with Hibernate native annotations.
- Added Hibernate-specific optimizations such as @DynamicUpdate.
- Removed persistence.xml configuration.
- Updated pom.xml with necessary dependencies and exclusions.
- Implemented JWT authentication for security.
- Integrated Swagger UI for full API documentation.

See HIBERNATE_MIGRATION.md and API_DOCUMENTATION.md for detailed documentation.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,9 +20,26 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- Hibernate specific dependencies instead of generic JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <!-- Exclude generic JPA to force Hibernate usage -->
+            <exclusions>
+                <exclusion>
+                    <groupId>jakarta.persistence</groupId>
+                    <artifactId>jakarta.persistence-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- Direct Hibernate dependencies for native API usage -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -36,6 +53,17 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <!-- Swagger/OpenAPI documentation dependencies -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-webmvc-core</artifactId>
+            <version>1.6.9</version>
         </dependency>
         <!-- Security dependencies -->
         <dependency>
