Fix: Configurar puerto Railway correctamente en Dockerfile y Spring Boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@
 spring.application.name=jsf-springboot-postgresql-app
 server.port=${PORT:8080}
 
+# Force Spring Boot to log startup port
+logging.level.org.springframework.boot.web.embedded.tomcat.TomcatWebServer=INFO
+
 # ============================================
 # LOGGING CONFIGURATION (EXTENSIVE FOR RAILWAY)
 # ============================================
