Fix dependency resolution: remove non-existent joinfaces-starter

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
         <joinfaces.version>5.2.0</joinfaces.version>
     </properties>
     
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.joinfaces</groupId>
+                <artifactId>joinfaces-bom</artifactId>
+                <version>${joinfaces.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+    
     <dependencies>
         <!-- Spring Boot Starters -->
         <dependency>
@@ -46,7 +58,6 @@
         <dependency>
             <groupId>org.joinfaces</groupId>
             <artifactId>primefaces-spring-boot-starter</artifactId>
-            <version>${joinfaces.version}</version>
         </dependency>
         
         <!-- Lombok para reducir boilerplate -->
