--- a/railway.toml
+++ b/railway.toml
@@ -8,3 +8,6 @@ healthcheckPath = "/actuator/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+[environment]
+PORT = "8080"
