--- a/railway.toml
+++ b/railway.toml
@@ -5,9 +5,8 @@ dockerfilePath = "Dockerfile"
 [deploy]
 startCommand = ""
 healthcheckPath = "/actuator/health"
-healthcheckTimeout = 300
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+healthcheckTimeout = 600
+restartPolicyType = "NEVER"
 
 [environment]
 PORT = "8080"
