Configure actuator readiness probe for better health checks

--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ dockerfilePath = "Dockerfile"
 
 [deploy]
 startCommand = ""
-healthcheckPath = "/actuator/health"
+healthcheckPath = "/actuator/health/readiness"
 healthcheckTimeout = 600
 restartPolicyType = "NEVER"
 
