--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,7 @@ server.servlet.context-path=/
 # ============================================
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+management.health.defaults.enabled=true
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
